--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
             <img
-              src="assets/img/yourmixjnr-intro.png"
+              src="assets/img/yourmixjnr-bg.jpg"
               class="img-fluid"
               alt=""
             />
@@ -821,7 +821,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/plplifttrucks.html"
+                    href="portfolio/plplifttrucks"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -851,7 +851,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/react-lite-input.html"
+                    href="/portfolio/react-lite-input"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -881,7 +881,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/thinkit-writeit.html"
+                    href="/portfolio/thinkit-writeit"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -911,7 +911,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/connectus.html"
+                    href="/portfolio/connectus"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -943,7 +943,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/pescademy.html"
+                    href="portfolio/pescademy"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -973,7 +973,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/bbcamp.html"
+                    href="portfolio/bbcamp"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1003,7 +1003,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/decorhub.html"
+                    href="portfolio/decorhub"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1026,7 +1026,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/portfolio.html"
+                    href="/portfolio/portfolio"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1058,7 +1058,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/movie-search-app.html"
+                    href="portfolio/movie-search-app"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1090,7 +1090,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/linkifyhub.html"
+                    href="portfolio/linkifyhub"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1120,7 +1120,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/brassworks.html"
+                    href="portfolio/brassworks"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
