chores: files updated

--- a/portfolio/bbcamp.html
+++ b/portfolio/bbcamp.html
@@ -105,7 +105,7 @@
                   <a
                     target="_blank"
                     href="https://github.com/YourmixJNR/BB_camp_reg_form"
-                    >Visit On GitHub</a
+                    >View On GitHub</a
                   >
                 </li>
               </ul>
