--- a/portfolio/brassworks.html
+++ b/portfolio/brassworks.html
@@ -110,7 +110,7 @@
                   <a
                     target="_blank"
                     href="https://github.com/YourmixJNR/Brassworks"
-                    >Visit On GitHub</a
+                    >View On GitHub</a
                   >
                 </li>
               </ul>
