--- a/portfolio/connectus.html
+++ b/portfolio/connectus.html
@@ -103,7 +103,7 @@
                   <a
                     target="_blank"
                     href="https://github.com/YourmixJNR/connect-us-web-client"
-                    >Visit On GitHub</a
+                    >View On GitHub</a
                   >
                 </li>
               </ul>
