--- a/portfolio/movie-search-app.html
+++ b/portfolio/movie-search-app.html
@@ -98,7 +98,7 @@
                   <a
                     target="_blank"
                     href="https://github.com/YourmixJNR/LinkifyHub"
-                    >Visit On GitHub</a
+                    >View On GitHub</a
                   >
                 </li>
               </ul>
