--- a/index.html
+++ b/index.html
@@ -162,11 +162,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img
-              src="assets/img/yourmixjnr-bg.jpg"
-              class="img-fluid"
-              alt=""
-            />
+            <img src="assets/img/yourmixjnr-bg.jpg" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -1017,12 +1013,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-front">
             <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="" />
+              <img
+                src="assets/img/portfolio/screenshot-1.png"
+                class="img-fluid"
+                alt=""
+              />
               <div class="portfolio-info">
                 <h4>YourmixJNR - My Portfolio</h4>
                 <p>Fontend</p>
                 <div class="portfolio-links">
-                  <a target="_blank" href="" title="YourmixJNR"
+                  <a
+                    target="_blank"
+                    href="https://yourmixjnr.vercel.app/"
+                    title="YourmixJNR"
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
