--- a/portfolio/decorhub.html
+++ b/portfolio/decorhub.html
@@ -107,7 +107,7 @@
                   <a
                     target="_blank"
                     href="https://github.com/YourmixJNR/decorhub"
-                    >Visit On GitHub</a
+                    >View On GitHub</a
                   >
                 </li>
               </ul>
