--- a/portfolio/linkifyhub.html
+++ b/portfolio/linkifyhub.html
@@ -97,7 +97,7 @@
                   <a
                     target="_blank"
                     href="https://github.com/YourmixJNR/LinkifyHub"
-                    >Visit On GitHub</a
+                    >View On GitHub</a
                   >
                 </li>
               </ul>
