chore: .html added to portfolios

--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/plplifttrucks"
+                    href="portfolio/plplifttrucks.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -847,7 +847,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/react-lite-input"
+                    href="/portfolio/react-lite-input.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -877,7 +877,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/thinkit-writeit"
+                    href="/portfolio/thinkit-writeit.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -907,7 +907,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/connectus"
+                    href="/portfolio/connectus.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -939,7 +939,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/pescademy"
+                    href="portfolio/pescademy.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -969,7 +969,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/bbcamp"
+                    href="portfolio/bbcamp.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -999,7 +999,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/decorhub"
+                    href="portfolio/decorhub.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1029,7 +1029,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="/portfolio/portfolio"
+                    href="/portfolio/portfolio.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1061,7 +1061,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/movie-search-app"
+                    href="portfolio/movie-search-app.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1093,7 +1093,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/linkifyhub"
+                    href="portfolio/linkifyhub.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
@@ -1123,7 +1123,7 @@
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
-                    href="portfolio/brassworks"
+                    href="portfolio/brassworks.html"
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
