fix: update résumé link and adjust experience description to three years

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Michael Victor Portfolio" />
     <meta
       property="og:description"
-      content="I’m a passionate Software Engineer specializing in Frontend Engineering with over two years of experience."
+      content="I’m a passionate Software Engineer specializing in Frontend Engineering with over three years of experience."
     />
     <meta
       property="og:image"
@@ -42,7 +42,7 @@
     <meta name="twitter:title" content="Michael Victor Portfolio" />
     <meta
       name="twitter:description"
-      content="I’m a passionate Software Engineer specializing in Frontend Engineering with over two years of experience."
+      content="I’m a passionate Software Engineer specializing in Frontend Engineering with over three years of experience."
     />
     <meta
       name="twitter:image"
@@ -168,7 +168,7 @@
             <h3>Software Engineer</h3>
             <p class="font-italic">
               I’m a passionate Software Engineer specializing in Frontend
-              Engineering with over two years of experience building responsive,
+              Engineering with over three years of experience building responsive,
               high-performance applications.
             </p>
             <div class="row">
@@ -471,7 +471,7 @@
               <p>
                 <em>
                   I’m a passionate Software Engineer specializing in Frontend
-                  Engineering with over two years of experience building
+                  Engineering with over three years of experience building
                   responsive, high-performance applications.</em
                 >
               </p>
