--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
             <h3>Software Engineer</h3>
             <p class="font-italic">
               I’m a passionate Software Engineer specializing in Frontend
-              Engineering with over three years of experience building responsive,
-              high-performance applications.
+              Engineering with over three years of experience building
+              responsive, high-performance applications.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -1296,6 +1296,12 @@
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
     <script src="assets/vendor/typed.js/typed.min.js"></script>
+
+    <!-- Load tsParticles from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tsparticles/2.12.0/tsparticles.bundle.min.js"></script>
+
+    <!-- Initialize tsParticles for particle effects -->
+    <script src="assets/js/tsparticles.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
