feat: update portfolio image and replace résumé link with latest version

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/yourmixjnr-bg.jpg" class="img-fluid" alt="" />
+            <img src="assets/img/yourmixjnr-intro.png" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -457,7 +457,7 @@
             <a
               class="resume"
               target="_blank"
-              href="./assets/resume/michael_victor_latest_2.pdf"
+              href="./assets/resume/michael_victor_latest_3.pdf"
               >Download My Resume</a
             >
           </div>
