fix: update URLs to point to the new domain for improved accessibility

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="https://yourmixjnr.vercel.app/assets/favicon.png"
+      content="https://www.yourmixjnr.tech/assets/favicon.png"
     />
     <meta
       property="og:url"
       itemprop="url"
-      content="https://yourmixjnr.vercel.app"
+      content="https://www.yourmixjnr.tech"
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -46,7 +46,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://yourmixjnr.vercel.app/assets/favicon.png"
+      content="https://www.yourmixjnr.tech/assets/favicon.png"
     />
     <meta name="twitter:app:country" content="NG" />
     <!-- Favicons -->
@@ -1024,7 +1024,7 @@
                 <div class="portfolio-links">
                   <a
                     target="_blank"
-                    href="https://yourmixjnr.vercel.app/"
+                    href="https://www.yourmixjnr.tech/"
                     title="YourmixJNR"
                     ><i class="bx bx-link"></i
                   ></a>
