feat: update portfolio links and personal branding to reflect new username and latest résumé

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Michael Victor Portfolio" />
     <meta
       name="Keywords"
-      content="Michael Victor, Michael, Victor, YourmixJNR, BuidlAi, YourmixJNR Inc, Portfolio, Front-End Developer, Backend Developer, Software Engineer, Nigeria, Akure, Fullstack Developer, YourmixJS, PHP, React, NodeJS"
+      content="Michael Victor, Michael, Victor, Yourmix0x, BuidlAi, Yourmix0x Inc, Portfolio, Front-End Developer, Backend Developer, Software Engineer, Nigeria, Akure, Fullstack Developer, YourmixJS, PHP, React, NodeJS"
     />
     <meta property="og:site_name" content="Michael Victor Portfolio" />
     <meta property="og:title" content="Michael Victor Portfolio" />
@@ -37,8 +37,8 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@YourmixJNR" />
-    <meta name="twitter:creator" content="@YourmixJNR" />
+    <meta name="twitter:site" content="@Yourmix0x" />
+    <meta name="twitter:creator" content="@Yourmix0x" />
     <meta name="twitter:title" content="Michael Victor Portfolio" />
     <meta
       name="twitter:description"
@@ -114,15 +114,15 @@
         <!-- .nav-menu -->
 
         <div class="social-links">
-          <a target="_blank" href="https://x.com/YourmixJNR" class="twitter"
+          <a target="_blank" href="https://x.com/Yourmix0x" class="twitter"
             ><i class="icofont-twitter"></i
           ></a>
-          <a target="_blank" href="https://github.com/YourmixJNR" class="github"
+          <a target="_blank" href="https://github.com/Yourmix0x" class="github"
             ><i class="bx bxl-github"></i
           ></a>
           <a
             target="_blank"
-            href="https://www.instagram.com/yourmixjnr/"
+            href="https://www.instagram.com/yourmix0x/"
             class="instagram"
             ><i class="icofont-instagram"></i
           ></a>
@@ -134,13 +134,13 @@
           ></a>
           <a
             target="_blank"
-            href="https://www.linkedin.com/in/yourmixjnr/"
+            href="https://www.linkedin.com/in/yourmix0x/"
             class="linkedin"
             ><i class="icofont-linkedin"></i
           ></a>
           <a
             target="_blank"
-            href="https://medium.com/@YourmixJnr"
+            href="https://medium.com/@Yourmix0x"
             class="blogger"
             ><i class="icofont-blogger"></i
           ></a>
@@ -162,7 +162,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/yourmixjnr-intro.png" class="img-fluid" alt="" />
+            <img src="assets/img/yourmix0x-intro.png" class="img-fluid" alt="" />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -196,7 +196,7 @@
                 <ul>
                   <li>
                     <i class="icofont-rounded-right"></i>
-                    <strong>Alias:</strong> YourmixJNR
+                    <strong>Alias:</strong> Yourmix0x
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
@@ -457,7 +457,7 @@
             <a
               class="resume"
               target="_blank"
-              href="./assets/resume/michael_victor_latest_3.pdf"
+              href="./assets/resume/michael_victor_latest_4.pdf"
               >Download My Resume</a
             >
           </div>
@@ -1019,13 +1019,13 @@
                 alt=""
               />
               <div class="portfolio-info">
-                <h4>YourmixJNR - My Portfolio</h4>
+                <h4>Yourmix0x - My Portfolio</h4>
                 <p>Fontend</p>
                 <div class="portfolio-links">
                   <a
                     target="_blank"
                     href="https://www.yourmixjnr.tech/"
-                    title="YourmixJNR"
+                    title="Yourmix0x"
                     ><i class="bx bx-link"></i
                   ></a>
                   <a
@@ -1033,7 +1033,7 @@
                     data-gall="portfolioDetailsGallery"
                     data-vbtype="iframe"
                     class="venobox"
-                    title="YourmixJNR"
+                    title="Yourmix0x"
                     ><i class="bx bx-plus"></i
                   ></a>
                 </div>
@@ -1163,13 +1163,13 @@
               <div class="social-links">
                 <a
                   target="_blank"
-                  href="https://x.com/YourmixJNR"
+                  href="https://x.com/Yourmix0x"
                   class="twitter"
                   ><i class="icofont-twitter"></i
                 ></a>
                 <a
                   target="_blank"
-                  href="https://github.com/YourmixJNR"
+                  href="https://github.com/Yourmix0x"
                   class="facebook"
                   ><i
                     style="color: inherit; padding: initial; font-size: 18px"
@@ -1178,7 +1178,7 @@
                 ></a>
                 <a
                   target="_blank"
-                  href="https://www.instagram.com/yourmixjnr/"
+                  href="https://www.instagram.com/yourmix0x/"
                   class="instagram"
                   ><i class="icofont-instagram"></i
                 ></a>
@@ -1190,7 +1190,7 @@
                 ></a>
                 <a
                   target="_blank"
-                  href="https://www.linkedin.com/in/yourmixjnr/"
+                  href="https://www.linkedin.com/in/yourmix0x/"
                   class="linkedin"
                   ><i class="icofont-linkedin"></i
                 ></a>
