--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -60,7 +60,7 @@
           <div class="row">
             <div class="col-lg-8">
               <h2 class="portfolio-title">
-                YourmixJNR Portfolio Project Details
+                Yourmix0x Portfolio Project Details
               </h2>
               <div class="owl-carousel portfolio-details-carousel">
                 <img
@@ -111,7 +111,7 @@
                 <li>
                   <a
                     target="_blank"
-                    href="https://github.com/YourmixJNR/yourmixjnr-portfolio-v1"
+                    href="https://github.com/Yourmix0x/yourmix0x-portfolio-v1"
                     >View on GitHub</a
                   >
                 </li>
