--- a/portfolio/decorhub.html
+++ b/portfolio/decorhub.html
@@ -106,7 +106,7 @@
                 <li>
                   <a
                     target="_blank"
-                    href="https://github.com/YourmixJNR/decorhub"
+                    href="https://github.com/Yourmix0x/decorhub"
                     >View On GitHub</a
                   >
                 </li>
