--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/yourmix0x-intro.png" class="img-fluid" alt="" />
+            <img
+              src="assets/img/yourmix0x-intro.png"
+              class="img-fluid"
+              alt=""
+            />
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
@@ -773,6 +777,36 @@
         </div>
 
         <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-front">
+            <div class="portfolio-wrap">
+              <img
+                src="assets/img/worthless/screenshot-1.png"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Worthless - Embrace the chaos with $WORTH</h4>
+                <p>Frontend</p>
+                <div class="portfolio-links">
+                  <a
+                    target="_blank"
+                    href="https://www.worthlessonbase.xyz/"
+                    title="Worthless"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                  <a
+                    href="portfolio/worthless.html"
+                    data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe"
+                    class="venobox"
+                    title="Worthless"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img
