feat: add Salvage Yard project details page with images and information

--- a/index.html
+++ b/index.html
@@ -777,6 +777,35 @@
         </div>
 
         <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-api">
+            <div class="portfolio-wrap">
+              <img
+                src="assets/img/salvage-yard/screenshot-1.png"
+                class="img-fluid"
+                alt=""
+              />
+              <div class="portfolio-info">
+                <h4>Salvage Yard - Dual-sided e-commerce platform.</h4>
+                <p>Web App || API</p>
+                <div class="portfolio-links">
+                  <a
+                    target="_blank"
+                    href="https://www.salvageyardstore.com/"
+                    title="Worthless"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                  <a
+                    href="portfolio/salvage-yard.html"
+                    data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe"
+                    class="venobox"
+                    title="Salvage Yard"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-front">
             <div class="portfolio-wrap">
               <img
