feat: add portfolio detail pages for Nel Professional and Sapphire Spotless Cleaning with images and information

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Michael Victor Portfolio" />
     <meta
       name="Keywords"
-      content="Michael Victor, Michael, Victor, Yourmix0x, BuidlAi, Yourmix0x Inc, Portfolio, Front-End Developer, Backend Developer, Software Engineer, Nigeria, Akure, Fullstack Developer, YourmixJS, PHP, React, NodeJS"
+      content="Michael Victor, Michael, Victor, nelprofessional, Nel, Professional, Yourmix0x, BuidlAi, Yourmix0x Inc, Portfolio, Front-End Developer, Backend Developer, Software Engineer, Nigeria, Akure, Fullstack Developer, YourmixJS, PHP, React, NodeJS"
     />
     <meta property="og:site_name" content="Michael Victor Portfolio" />
     <meta property="og:title" content="Michael Victor Portfolio" />
@@ -777,6 +777,69 @@
         </div>
 
         <div class="row portfolio-container">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-front filter-api">
+            <div class="portfolio-wrap">
+              <img
+                src="assets/img/sapphirespotlesscleaning/screenshot-1.png"
+                class="img-fluid"
+                alt="Sapphire Cleaning Service Screenshot"
+              />
+              <div class="portfolio-info">
+                <h4>
+                  Sapphire Cleaning Service - Beyond Spotless, Beautiful
+                  Sapphire.
+                </h4>
+                <p>Web App || API || Frontend</p>
+                <div class="portfolio-links">
+                  <a
+                    target="_blank"
+                    href="https://www.sapphirespotlesscleaning.co.uk/"
+                    title="Sapphire Cleaning Service"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                  <a
+                    href="portfolio/sapphirespotlesscleaning.html"
+                    data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe"
+                    class="venobox"
+                    title="Sapphire Cleaning Service"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-api">
+            <div class="portfolio-wrap">
+              <img
+                src="assets/img/nelprofessional/screenshot-1.png"
+                class="img-fluid"
+                alt="Nel Professional Screenshot"
+              />
+              <div class="portfolio-info">
+                <h4>
+                  Nel Professional - Connect with top professionals worldwide.
+                </h4>
+                <p>Web App || API</p>
+                <div class="portfolio-links">
+                  <a
+                    target="_blank"
+                    href="https://www.nelprofessional.com/"
+                    title="Nel Professional"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                  <a
+                    href="portfolio/nelprofessional.html"
+                    data-gall="portfolioDetailsGallery"
+                    data-vbtype="iframe"
+                    class="venobox"
+                    title="Nel Professional"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-api">
             <div class="portfolio-wrap">
               <img
