feat: add confetti effect for birthday celebration on August 10th

--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,9 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
 
+    <!-- Confetti Effect for Birthday (August 10th) -->
+    <script src="assets/js/confettiEffect.js"></script>
+
     <!-- form submission -->
     <script>
       async function send(name, email, subject, message) {
