fix: update meta description for improved clarity on skills and experience

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Michael Victor Portfolio" />
     <meta
       property="og:description"
-      content="I’m a passionate Software Engineer specializing in Frontend Engineering with over three years of experience."
+      content="I’m a software engineer skilled in react, next.js, and solidity, building fast web apps and seamless web3 experiences."
     />
     <meta
       property="og:image"
@@ -42,7 +42,7 @@
     <meta name="twitter:title" content="Michael Victor Portfolio" />
     <meta
       name="twitter:description"
-      content="I’m a passionate Software Engineer specializing in Frontend Engineering with over three years of experience."
+      content="I’m a software engineer skilled in react, next.js, and solidity, building fast web apps and seamless web3 experiences."
     />
     <meta
       name="twitter:image"
