fix: improve wording and capitalization in portfolio description and experience sections

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer</h3>
             <p class="font-italic">
-            I’m a software engineer focused on building fast and reliable web apps with react and next.js. I also write smart contracts with solidity and build full web3 features from interface to contract logic. My work spans frontend engineering, web3 integration, and end to end product development.
+            I'm a Software Engineer focused on building fast and reliable web apps with React and Next.js. I also write smart contracts with Solidity and build full Web3 features from interface to contract logic. My work spans Frontend Engineering, Web3 Integration, and end to end product development.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -209,15 +209,15 @@
                     <strong>Work Status:</strong> Available
                   </li>
                 </ul>
+                </div>
+              </div>
+              <p>
+               I have hands on experience delivering production platforms for startups and established companies. I work with JavaScript, TypeScript, React, Next.js, Tailwind CSS, Node.js, Express, Solidity, Flutter, and React Native. I focus on clean architecture, performance, and building interfaces that scale. I enjoy solving complex product problems and turning ideas into working software that users understand immediately.
+              </p>
               </div>
             </div>
-            <p>
-           I have hands on experience delivering production platforms for startups and established companies. I work with javascript, typescript, react, next.js, tailwind css, node.js, express, solidity, flutter, and react native. I focus on clean architecture, performance, and building interfaces that scale. I enjoy solving complex product problems and turning ideas into working software that users understand immediately.
-            </p>
-          </div>
-        </div>
-      </div>
-      <!-- End About Me -->
+            </div>
+            <!-- End About Me -->
 
       <!-- ======= Counts ======= -->
       <div class="counts container">
@@ -529,7 +529,7 @@
 
               <ul>
                 <li>
-                  Fixed critical bugs and implemented new features across existing products, improving stability and meeting ceo and pm requirements.
+                  Fixed critical bugs and implemented new features across existing products, improving stability and meeting CEO and PM requirements.
                 </li>
                 <li>
                   Collaborated with the team lead to optimize ui flows and enhance performance, improving user experience by an estimated 60%.
@@ -540,7 +540,7 @@
             <div class="resume-item">
               <h4>Frontend Lead</h4>
               <h5>July 2025 - October 2025</h5>
-              <p><em>Nel Professionals</em></p>
+              <p><em>Nel Professionals (Contract)</em></p>
               <p></p>
 
               <ul>
@@ -548,7 +548,7 @@
                   Co-developed a two sided platform for clients and professionals with account creation, proposal workflows, milestones, and project automation.
                 </li>
                 <li>
-                  Integrated stripe identity and stripe cards to enforce verification and secure job posting, boosting trust and reducing fraudulent attempts by an estimated 70%.
+                  Integrated Stripe Identity and Stripe Cards to enforce verification and secure job posting, boosting trust and reducing fraudulent attempts by an estimated 70%.
                 </li>
                 <li>
                   Built the admin dashboard to manage users, jobs, payouts, reports, and platform operations with improved oversight and faster issue resolution.
@@ -558,7 +558,7 @@
               <div class="resume-item">
               <h4>Tech Lead | Software Engineer</h4>
               <h5>January 2023 - September 2025</h5>
-              <p><em>Aquaorg</em></p>
+              <p><em>Aquaorg (Part-time)</em></p>
               <p></p>
 
               <ul>
