fix: update URLs to reflect new domain for consistency

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="https://www.yourmixjnr.tech/assets/favicon.png"
+      content="https://www.yourmix0x.dev/assets/favicon.png"
     />
     <meta
       property="og:url"
       itemprop="url"
-      content="https://www.yourmixjnr.tech"
+      content="https://www.yourmix0x.dev"
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -52,7 +52,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.yourmixjnr.tech/assets/favicon.png"
+      content="https://www.yourmix0x.dev/assets/favicon.png"
     />
     <meta name="twitter:app:country" content="NG" />
     <!-- Favicons -->
@@ -1065,7 +1065,7 @@
                 <div class="portfolio-links">
                   <a
                     target="_blank"
-                    href="https://www.yourmixjnr.tech/"
+                    href="https://www.yourmix0x.dev/"
                     title="Yourmix0x"
                     ><i class="bx bx-link"></i
                   ></a>
