fix: correct capitalization of 'SalvageYard' in resume and index.html

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 
               <ul>
                 <li>
-                  Worked on multiple projects including salvageyard, an ecommerce marketplace with buyers, sellers, payments, and a full product management flow.
+                  Worked on multiple projects including SalvageYard, an ecommerce marketplace with buyers, sellers, payments, and a full product management flow.
                 </li>
                 <li>
                   Delivered client projects to specification, achieving strong satisfaction ratings and reducing revision cycles by roughly 50%.
