feat: add thumbnail image and update image URLs for improved social sharing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="https://www.yourmix0x.dev/assets/thumbnail.jpg"
+      content="https://www.yourmix0x.dev/assets/thumbnail.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -60,7 +60,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.yourmix0x.dev/assets/thumbnail.jpg"
+      content="https://www.yourmix0x.dev/assets/thumbnail.png"
     />
     <meta name="twitter:image:alt" content="Michael Victor | Frontend Engineer | Web3 Developer" />
     <meta name="twitter:app:country" content="NG" />
@@ -74,7 +74,7 @@
       "name": "Michael Victor",
       "alternateName": "Yourmix0x",
       "url": "https://www.yourmix0x.dev",
-      "image": "https://www.yourmix0x.dev/assets/thumbnail.jpg",
+      "image": "https://www.yourmix0x.dev/assets/thumbnail.png",
       "sameAs": [
         "https://github.com/Yourmix0x",
         "https://x.com/Yourmix0x",
